--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 </head>
 <body>
     <!-- banner -->
-    <div class="parent">
-        <div class="left">
-
+    <div class="parent flex border-2 border-red-500 min-h-[200px] container mx-auto">
+        <div class="left border-9 border-green-500 ">
+            <h1 >It's good 
+            tea time at The Tea House</h1>
+            <p>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <button>Explore More</button>
         </div>
-        <div class="right">
-
+        <div class="right border-9 border-yellow-500 ">
+            <img src="./images/banner.png" alt="">
         </div>
     </div>
     
