--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <!-- banner -->
-    <div class="parent flex border-2 border-red-500 min-h-[200px] container mx-auto">
+    <div class="parent flex justify-between items-center border-2 border-red-500 min-h-[200px] max-w-[1250px] mx-auto">
         <div class="left border-9 border-green-500 ">
-            <h1 >It's good 
-            tea time at The Tea House</h1>
-            <p>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-            <button>Explore More</button>
+            <h1 class="text-[80px]">It's good <br>
+            tea time at The <br> Tea House</h1>
+            <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br>Satisfaction To Your Taste Buds.</p>
+            <button class="w-[200px] h-[64px] bg-red-500 text-xl text-white rounded-[10px]">Explore More</button>
         </div>
         <div class="right border-9 border-yellow-500 ">
             <img src="./images/banner.png" alt="">
