--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
 </head>
 <body>
     <!-- banner -->
-    <div class="parent flex justify-between items-center border-2 border-red-500 min-h-[200px] max-w-[1250px] mx-auto">
+    <div class="parent flex justify-between border-2 border-red-500 min-h-[200px] max-w-[1250px] mx-auto">
         <div class="left border-9 border-green-500 ">
-            <h1 class="text-[80px]">It's good <br>
+            <h1 class="text-[80px] font-bold">It's good <br>
             tea time at The <br> Tea House</h1>
             <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br>Satisfaction To Your Taste Buds.</p>
-            <button class="w-[200px] h-[64px] bg-red-500 text-xl text-white rounded-[10px]">Explore More</button>
+            <button class="w-[200px] h-[64px] bg-gradient-to-r from-[#ff8938] to-[#ff0000] text-xl text-white rounded-[10px]">Explore More</button>
         </div>
-        <div class="right border-9 border-yellow-500 ">
-            <img src="./images/banner.png" alt="">
+        <div class="right border-9 border-yellow-500  ">
+            <img src="./images/banner.png " class="relative top-[250px]" alt="">
+            <div class=" w-[255px] h-[100px] flex items-center rounded-lg shadow-md">
+                <span class="text-4xl"><i class="fa-solid fa-star"></i></span>
+                <div>
+                <p class="text-4xl font-bold">5.00</p>
+                <p>Trust Pilot Rating</p>
+                </div>
+
+            </div>
         </div>
     </div>
     
