--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 <body>
     <!-- banner -->
-    <div class="parent flex justify-between border-2 border-red-500 min-h-[200px] max-w-[1250px] mx-auto">
-        <div class="left border-9 border-green-500 ">
+    <div class="parent flex flex-col md:flex-row  justify-between  min-h-[200px] max-w-[1250px] mx-auto">
+        <div class="left ">
             <h1 class="text-[80px] font-bold">It's good <br>
             tea time at The <br> Tea House</h1>
             <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br>Satisfaction To Your Taste Buds.</p>
-            <button class="w-[200px] h-[64px] bg-gradient-to-r from-[#ff8938] to-[#ff0000] text-xl text-white rounded-[10px]">Explore More</button>
+            <button class="w-[200px] h-[64px] bg-gradient-to-r from-[#ff8938] to-[#ff0000] text-xl text-white rounded-[10px]"><span>Explore More</span> <span><i class="fa-solid fa-arrow-right -rotate-45"></i></span></button>
         </div>
-        <div class="right border-9 border-yellow-500  ">
-            <img src="./images/banner.png " class="relative top-[250px]" alt="">
-            <div class=" w-[255px] h-[100px] flex items-center rounded-lg shadow-md">
+        <div class="right  relative ">
+            <img src="./images/banner.png " class="relative top-[250px] " alt="">
+            <div class=" w-[255px] h-[100px] flex items-center rounded-lg shadow-md bg-white absolute left-20 top-155 ">
                 <span class="text-4xl"><i class="fa-solid fa-star"></i></span>
                 <div>
                 <p class="text-4xl font-bold">5.00</p>
@@ -32,6 +32,19 @@
             </div>
         </div>
     </div>
+    <!-- feature section -->
+     <section class="min-h-[200px] max-w-[1250px] mx-auto mt-[250px]">
+        <h1 class="text-5xl font-bold text-center">Our Featured Products</h1>
+        <p class="text-center"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <div class="parent1 min-h-[200px]   ">
+        <div class="feature_card w-[200px] min-h-[300px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] text-center rounded-[10px]">
+            <img src="./images/tea-1.png" class="mx-auto block" alt="">
+            <h1 class="text-2xl font-bold">Green Tea</h1>
+            <p>Creamer vould not replace by milk</p>
+            
+        </div>
+     </div>
+     </section>
     
 </body>
 </html>
